feat(cicd): Added CI/CD pipeline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "2"
 services:
   app:
     image: DOCKER_REGISTRY:IMAGE_TAG
-    container_name: python-flask-cicd
+    #container_name: python-flask-cicd
     ports:
-      - "80:5000"
+      - "5001-5003:5000"
+    deploy:
+      mode: replicated
+      replicas: 3
